<resources>
    <string name="app_name">TestProject</string>

    <!-- activity_main.xml -->
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">BUY NOW</string>
    <string name="bdt">BDT.</string>
    <string name="ratings">Ratings</string>
    <string name="reviews">Reviews</string>
    <string name="orders">Orders</string>
    <string name="colors">Colors</string>
    <string name="shipping">Shipping</string>
    <string name="sizes">Sizes</string>
    <string name="Cost_bdt">Cost: BDT. 4000</string>
    <string name="specification">Specification</string>
    <string name="how_to_order">How to Order</string>
    <string name="faq">FAQ</string>
    <string name="wholesale_inquiry">Wholesale Inquiry</string>
    <string name="description">Description</string>
    <string name="view_full_description">View Full Description</string>
    <string name="zDrop_premium_shipping">zDrop Premium Shipping</string>
    <string name="tunanle_sandals_description">TUINANLE Sandals Women 2020 New Sexy Open-toed Sandals Wedge Outdoor Cool Platform Shoes Ladies Beach Summer Sandalia Feminina</string>
    
    <!-- bottom_sheet_fragment.xml -->
    <string name="product_option">Product Option</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="quantity">Quantity</string>
    <string-array name="costs">
        <item>Cost: BDT. 4000</item>
        <item>Cost: BDT. 3000</item>
        <item>Cost: BDT. 1000</item>
    </string-array>
    
</resources>