<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_fragment_bg"
        android:paddingTop="@dimen/_2sdp"
        android:paddingBottom="@dimen/_15sdp">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_14_per"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_86_per"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".84" />

        <ImageView
            android:id="@+id/close_icon"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_product_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoeui"
            android:text="@string/product_option"
            android:textColor="@color/black2"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/close_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RelativeLayout
            android:id="@+id/prev_imsg_layout"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/round_layout_transparent_black1"
            app:layout_constraintBottom_toBottomOf="@id/imageCardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageCardView">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_chevron_left" />

        </RelativeLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/imageCardView"
            android:layout_width="0dp"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintEnd_toStartOf="@id/gl_86_per"
            app:layout_constraintStart_toEndOf="@id/gl_14_per"
            app:layout_constraintTop_toBottomOf="@id/tv_product_option">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_image_10dp_bg">

                <ImageSwitcher
                    android:id="@+id/imageSwitcher"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:id="@+id/next_img_layout"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/round_layout_transparent_black1"
            app:layout_constraintBottom_toBottomOf="@id/imageCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageCardView">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_baseline_chevron_right_24" />

        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/segeo_ui_bold"
            android:text="BDT. 2,850 - BDT. 1,261"
            android:textColor="@color/black2"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageCardView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/color"
            android:textColor="@color/black2"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amount" />

        <LinearLayout
            android:id="@+id/Layout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/color"
            app:layout_constraintTop_toBottomOf="@id/color">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="@dimen/_60sdp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/_2sdp">

                <RelativeLayout
                    android:id="@+id/img1Layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/cardview_layout_shoe">

                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_centerInParent="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/cover_image" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="@dimen/_60sdp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/img2Layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/cardview_layout_shoe"
                    android:elevation="@dimen/_2sdp">

                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_centerInParent="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/image2" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="@dimen/_60sdp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/img3Layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/cardview_layout_shoe"
                    android:elevation="@dimen/_2sdp">

                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_centerInParent="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/cover_image" />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="@dimen/_60sdp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/img4Layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/cardview_layout_shoe"
                    android:elevation="@dimen/_2sdp">

                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:scaleType="fitXY"
                        android:src="@drawable/image2" />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="@dimen/_60sdp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/img5Layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/cardview_layout_shoe"
                    android:elevation="@dimen/_2sdp">

                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_centerInParent="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/cover_image" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/size"
            android:textColor="@color/black2"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Layout1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sizeRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/size"
            app:layout_constraintTop_toBottomOf="@id/size" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/quantity"
            android:textColor="@color/black2"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/size"
            app:layout_constraintTop_toBottomOf="@id/sizeRecyclerView" />

        <ImageView
            android:id="@+id/removeItem"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/ic_baseline_remove_circle_24"
            app:layout_constraintBottom_toBottomOf="@id/quantity"
            app:layout_constraintStart_toEndOf="@id/quantity"
            app:layout_constraintTop_toTopOf="@id/quantity" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/segoeui"
            android:text="1"
            android:textColor="@color/black2"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/addItem"
            app:layout_constraintStart_toEndOf="@id/removeItem"
            app:layout_constraintTop_toTopOf="@id/quantity" />


        <ImageView
            android:id="@+id/addItem"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_baseline_add_circle_24"
            app:layout_constraintBottom_toBottomOf="@id/quantity"
            app:layout_constraintStart_toEndOf="@id/tv_quantity"
            app:layout_constraintTop_toTopOf="@id/quantity" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/ash3"
            app:layout_constraintTop_toBottomOf="@id/quantity" />

        <ImageView
            android:id="@+id/shipping_icon"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/fast_delivery_icon"
            app:layout_constraintStart_toStartOf="@id/Layout1"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/shipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/segoeui"
            android:text="@string/shipping"
            android:textColor="@color/transparent_black1"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/shipping_icon"
            app:layout_constraintStart_toEndOf="@id/shipping_icon"
            app:layout_constraintTop_toTopOf="@id/shipping_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/estimated_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Estimated Delivery: 7-15 days"
            android:textColor="@color/ash4"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@id/Layout1"
            app:layout_constraintTop_toTopOf="@+id/shipping" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/spinner_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/spinner_border"
            android:padding="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="@+id/estimated_delivery"
            app:layout_constraintStart_toStartOf="@id/shipping_icon"
            app:layout_constraintTop_toBottomOf="@id/shipping_icon">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/zDropTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeui"
                android:text="@string/zDrop_premium_shipping"
                android:textColor="@color/transparent_black_2"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/zDropTV"
                app:layout_constraintBottom_toBottomOf="@id/zDropTV"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/ash3"
            app:layout_constraintTop_toBottomOf="@+id/spinner_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>